# bfcode

./: .env.example  .gitignore  FEATURES.md  LICENSE  README.md
.github/workflows/: release.yml
cli/: Cargo.toml  Makefile
cli/src/: agent.rs  api.rs  browser.rs  config.rs  context.rs  cron.rs  daemon.rs  doctor.rs  fallback.rs  gateway.rs  github.rs  guard.rs  lib.rs  lsp.rs  main.rs  mcp.rs  patch.rs  persistence.rs  plugin.rs  search.rs  skill.rs  telegram.rs  test_utils.rs  tools.rs  tui.rs  types.rs  worktree.rs
cli/tests/: cron_jobs.rs  gateway_websocket.rs  playwright_browser.rs  test_gateway.py
gui/: .env.example  .gitignore  Makefile  README.md  chat.lua  conf.lua  generate_image.py  http.lua  json.lua  login.lua  main.lua  process_sprites.py  ui.lua  ws.lua
