[package]
name = "bfcode"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dirs = "6"
colored = "3"
chrono = "0.4"
arboard = "3"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
pdf-extract = "0.7"
base64 = "0.22"
ratatui = "0.29"
crossterm = "0.28"
unicode-width = "0.2"
uuid = { version = "1", features = ["v4"] }
tokio-tungstenite = "0.24"
sha1 = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors"] }
rustyline = "15"

[lib]
name = "bfcode"
path = "src/lib.rs"

[[bin]]
name = "bfcode"
path = "src/main.rs"

[[bin]]
name = "bfcode-cli"
path = "src/bin/bfcode_client.rs"

[dev-dependencies]
tempfile = "3"
playwright = "0.0.20"
